--- a/Black_Tide/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Black_Tide/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -141,7 +141,9 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 CameraSpeed=7
+SnapScaleEnabled=False
 CurrentPosGridSize=0
+CurrentScalingGridSize=1
 FlightCameraControlExperimentalNavigation=False
 MinimumOrthographicZoom=250.000000
 bAllowArcballRotate=False
@@ -285,7 +287,7 @@ Actor.Networking=True
 Actor.Actor=True
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Village/Meshes
+ContentBrowserDrawer.SelectedPaths=/Game/Village
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -313,17 +315,17 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserDrawer.JumpMRU=/All/Game/Map
-ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All
+ContentBrowserDrawer.JumpMRU=/All/Game/Village/Meshes
 ContentBrowserDrawer.JumpMRU=/All/Game/Village
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/FantasyInterior01/Meshes
+ContentBrowserDrawer.JumpMRU=/All/Game/FantasyInterior01
+ContentBrowserDrawer.JumpMRU=/All/Game/Map
+ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/Village/Maps
 ContentBrowserDrawer.JumpMRU=/All/Game/Village/Maps/Village_SummerExample_sharedassets
 ContentBrowserDrawer.JumpMRU=/All/Game/Village/Blueprints
-ContentBrowserDrawer.JumpMRU=/All/Game/FantasyInterior01
 ContentBrowserDrawer.JumpMRU=/All/Game/FantasyInterior01/Maps
-ContentBrowserDrawer.JumpMRU=/All/Game/Village/Meshes
-ContentBrowserDrawer.JumpMRU=/All/Game/FantasyInterior01/Meshes
 ContentBrowserDrawer.JumpMRU=/All/Game/Village/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/Village/Textures
 ContentBrowserDrawer.JumpMRU=/All/Game/Village/Meshes/SnowIslands
@@ -1783,10 +1785,12 @@ PathsListingID=(("/Game/FantasyInterior01", "90a2bb2b-7e0f-4e7a-9df6-508df7461c5
 LastLogListing=MapCheck
 
 [PlacementMode]
+RecentlyPlaced=/Game/Village/Meshes/SM_DoorHouse01.SM_DoorHouse01;
+RecentlyPlaced=/Game/Village/Meshes/SM_OuthouseDoor01.SM_OuthouseDoor01;
+RecentlyPlaced=/Game/Village/Meshes/SM_Loghouse01_Shortside_Doorway01.SM_Loghouse01_Shortside_Doorway01;
 RecentlyPlaced=/Game/Village/Meshes/SM_Loghouse01_Shortside_Windows01.SM_Loghouse01_Shortside_Windows01;
 RecentlyPlaced=/Game/FantasyInterior01/Meshes/SM_Ceiling_01.SM_Ceiling_01;
 RecentlyPlaced=/Game/Village/Meshes/SM_Loghouse01_Shortside_NoWindows01.SM_Loghouse01_Shortside_NoWindows01;
-RecentlyPlaced=/Game/Village/Meshes/SM_Loghouse01_Shortside_Doorway01.SM_Loghouse01_Shortside_Doorway01;
 RecentlyPlaced=/Game/Village/Meshes/SM_SkySphere.SM_SkySphere;
 RecentlyPlaced=/Game/Village/Meshes/SM_Loghouse01_SidingBoards01A.SM_Loghouse01_SidingBoards01A;
 RecentlyPlaced=/Game/FantasyInterior01/Meshes/SM_Floor_01.SM_Floor_01;
