--- a/Black_Tide/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Black_Tide/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -287,7 +287,7 @@ Actor.Networking=True
 Actor.Actor=True
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Village
+ContentBrowserDrawer.SelectedPaths=/Game/FantasyInterior01/Meshes
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -315,18 +315,18 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserDrawer.JumpMRU=/All/Game/Village/Meshes
-ContentBrowserDrawer.JumpMRU=/All/Game/Village
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/FantasyInterior01/Meshes
 ContentBrowserDrawer.JumpMRU=/All/Game/FantasyInterior01
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/Village
+ContentBrowserDrawer.JumpMRU=/All/Game/Village/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game/Village/Maps
+ContentBrowserDrawer.JumpMRU=/All/Game/Village/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game/Village/Meshes
 ContentBrowserDrawer.JumpMRU=/All/Game/Map
 ContentBrowserDrawer.JumpMRU=/All
-ContentBrowserDrawer.JumpMRU=/All/Game/Village/Maps
 ContentBrowserDrawer.JumpMRU=/All/Game/Village/Maps/Village_SummerExample_sharedassets
-ContentBrowserDrawer.JumpMRU=/All/Game/Village/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/FantasyInterior01/Maps
-ContentBrowserDrawer.JumpMRU=/All/Game/Village/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/Village/Textures
 ContentBrowserDrawer.JumpMRU=/All/Game/Village/Meshes/SnowIslands
 ContentBrowserDrawer.JumpMRU=/All/Game/FantasyInterior01/Materials
@@ -1785,6 +1785,15 @@ PathsListingID=(("/Game/FantasyInterior01", "90a2bb2b-7e0f-4e7a-9df6-508df7461c5
 LastLogListing=MapCheck
 
 [PlacementMode]
+RecentlyPlaced=/Game/FantasyInterior01/Meshes/SM_Pot_01.SM_Pot_01;
+RecentlyPlaced=/Game/FantasyInterior01/Meshes/SM_Jar_Cork_01.SM_Jar_Cork_01;
+RecentlyPlaced=/Game/FantasyInterior01/Meshes/SM_Table_02.SM_Table_02;
+RecentlyPlaced=/Game/FantasyInterior01/Meshes/SM_Firewood_01.SM_Firewood_01;
+RecentlyPlaced=/Game/FantasyInterior01/Meshes/SM_Fireplace_02.SM_Fireplace_02;
+RecentlyPlaced=/Game/FantasyInterior01/Meshes/SM_Couch_01.SM_Couch_01;
+RecentlyPlaced=/Game/FantasyInterior01/Meshes/SM_Stool_01.SM_Stool_01;
+RecentlyPlaced=/Game/FantasyInterior01/Meshes/SM_Table_01.SM_Table_01;
+RecentlyPlaced=/Game/FantasyInterior01/Meshes/SM_Chair_01.SM_Chair_01;
 RecentlyPlaced=/Game/Village/Meshes/SM_DoorHouse01.SM_DoorHouse01;
 RecentlyPlaced=/Game/Village/Meshes/SM_OuthouseDoor01.SM_OuthouseDoor01;
 RecentlyPlaced=/Game/Village/Meshes/SM_Loghouse01_Shortside_Doorway01.SM_Loghouse01_Shortside_Doorway01;
